bad/assign_field_bool_arr_elem_null.example_compiler_output
ERROR
[1mbad/assign_field_bool_arr_elem_null.lat:7:20: [1;31merror: [0;1massigning to `boolean` from incompatible type `null`[m
	(new C[1])[2].fld = null;
	                  [1;32m^[m
